Fix spacing

--- a/packages/webapp/src/components/Modals/FileSizeExceedModal/styles.module.scss
+++ b/packages/webapp/src/components/Modals/FileSizeExceedModal/styles.module.scss
@@ -1,5 +1,5 @@
 .button {
     width: 96px;
-    margin-right: 8px;
+    margin-right: 16px;
 }
  
